Deeply nested phrasing content is parsed incorrectly https://bugs.webkit.org/show_bug.cgi?id=162527

Reviewed by Brent Fulgham.

Fixed the bug by implementing the missing early return in the adoption agency algorithm.

Based on https://crrev.com/69ad2d7d5eecfb79a8b5dc4d01b575926500ef08

* LayoutTests/imported/w3c/web-platform-tests/html/syntax/parsing/adoption_agency_check_the_end_tag_name-expected.txt:
* Source/WebCore/html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::callTheAdoptionAgency):

Canonical link: https://commits.webkit.org/252979@main